# learn-genai

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
agents/: index.html
concepts/: index.html
docs/: concepts.md  frameworks.md  genai.md  index.md  local.md  nlp.md  nlpb.md  openai.md  prompt-code.md  prompt-samples.md  prompts.md
frameworks/: index.html
genai/: index.html
local/: index.html
nlp/: index.html
nlpb/: index.html
notebooks/: 0a.Prompting.ipynb  1.LlamaFile_Sample.ipynb  2.LlamaIndex_LlamaFile_Sample.ipynb  3.LangChain_LlamaFile_Sample.ipynb
notebooks/scripts/: helper_functions.py
openai/: index.html
prompt-code/: index.html
prompt-samples/: index.html
prompts/: index.html
search/: search_index.json
