[project]
name = "learn-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cchardet>=2.1.7",
    "dotenv>=0.9.9",
    "ipykernel>=6.31.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "llama-index>=0.14.10",
    "llama-index-embeddings-llamafile>=0.4.1",
    "llama-index-llms-llamafile>=0.4.1",
    "mkdocs>=1.6.1",
    "mkdocs-custommill>=1.3.0",
    "mkdocs-material>=9.7.1",
    "mkdocs-material-extensions>=1.3.1",
    "openai>=2.14.0",
    "opencv-python>=4.12.0.88",
    "panel>=1.4.5",
    "pip>=25.3",
    "pymdown-extensions>=10.19.1",
    "python-markdown-math>=0.9",
    "scikit-learn>=1.6.1",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.4",
    "torch>=2.2.2",
]

[tool.uv]
# To require that the project supports Intel macOS. This setting is only relevant for packages that do not publish a source distribution (like PyTorch), as such packages can only be installed on environments covered by the set of pre-built binary distributions (wheels) published by that package.
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
